# detector_train_system

./: .gitignore  CI_FORMATTING_FIXES.md  CI_IMPORT_FIXES.md  README.md  test_checkpoint_fix.py  ucf_resume_config_minimal.yaml  ucf_training_config.yaml  xception.py  xception_congif.yaml  xception_resume_config.yaml  yolo_builtin_example.yaml
models/: capsule_standalone.py  meso4_standalone.py  (+7 more)
train_system/: ADAPTER_GUIDE.md  ENHANCED_FEATURES.md  INSTALLATION.md  LICENSE  MANIFEST.in  OPTIONAL_API_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README-COLAB.md  README.md  TEST_COVERAGE.md  check_checkpoint.py  install_colab.py  install_kaggle.py  install_universal.py  local_defaults.yaml  pyproject.toml  pytest.ini  requirements-colab.txt  requirements-kaggle.txt  requirements-local.txt  requirements-test.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  setup_web.py  simple_api_test.py  test_enhanced_api.py  test_optional_api.py
train_system/configs/: README.md  advanced_augmentation_example.yaml  augmentation_config_example.yaml  capsule_forensics_config.yaml  complete_config_template.yaml  default_config.yaml  external_adapter_example.yaml  external_trainer_example.yaml  no_augmentation_example.yaml  optimized_training.yaml  performance_optimized_template.yaml  quick_reference_template.yaml  test_resume_config.yaml  yolo_builtin_example.yaml
train_system/custom_adapters/: capsule_forensics_adapter.py
train_system/custom_trainers/: __init__.py  capsule_forensics_trainer.py  yolo_trainer.py  yolo_trainer_robust.py
train_system/docs/: ERROR_LOGGING.md
train_system/examples/: basic_example.py
train_system/tests/: README.md  test_basic.py  test_comprehensive.py
train_system/train_system/: __init__.py
train_system/train_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
train_system/train_system/adapters/: __init__.py  external_adapter.py
train_system/train_system/api/: README.md  __init__.py  config.py  deploy.py  requirements-web.txt  server.py  templates.py  test_api.py  test_web_api.py  web_server.py
train_system/train_system/cli/: dry_run.py  main.py
train_system/train_system/config/: __init__.py
train_system/train_system/configs/: default_config.yaml
train_system/train_system/core/: __init__.py  dataset.py  external_trainer.py  trainer.py  wrapper.py
train_system/train_system/registry/: __init__.py  adapter_registry.py  discovery.py  trainer_registry.py
train_system/train_system/utils/: __init__.py  config_validator.py  device_manager.py  memory.py  path_resolver.py  weights.py
train_system/training_output/capsule_forensics_external/tensorboard/: events.out.tfevents.1754255645.MSI.26636.0  events.out.tfevents.1754255668.MSI.25304.0  events.out.tfevents.1754255713.MSI.19504.0
train_system/training_output/test_adapter_specification/: config.json  config.yaml
train_system/training_output/test_adapter_specification/tensorboard/: events.out.tfevents.1754158884.MSI.13528.0  events.out.tfevents.1754158955.MSI.11276.0
train_system/training_output/test_class_folders_adapter/: best_checkpoint.pth  config.json  config.yaml  last_checkpoint.pth  training_results.json
train_system/training_output/test_class_folders_adapter/tensorboard/: events.out.tfevents.1754158260.MSI.9096.0  events.out.tfevents.1754158551.MSI.14392.0  events.out.tfevents.1754158644.MSI.10744.0
train_system/training_output/test_default_adapter/: config.json  config.yaml
train_system/training_output/test_default_adapter/tensorboard/: events.out.tfevents.1754158844.MSI.22836.0
train_system/training_output/test_resume_xception/experiment/tensorboard/: events.out.tfevents.1754250122.MSI.12576.0
train_system/training_output/xception_deepfake/: config.json  config.yaml  training_results.json
train_system/training_output/xception_deepfake/tensorboard/: events.out.tfevents.1754255600.MSI.23292.0
train_system/training_output/yolo_builtin/yolo_builtin/tensorboard/: events.out.tfevents.1754255746.MSI.25932.0  events.out.tfevents.1754255788.MSI.3080.0
train_system/training_output/yolo_test/: best_checkpoint.pt  best_checkpoint.pth  config.json  config.yaml  last_checkpoint.pt  last_checkpoint.pth  training_results.json  yolo_compatible_best_checkpoint.pt
train_system/training_output/yolo_test/tensorboard/: events.out.tfevents.1754157609.MSI.19432.0  events.out.tfevents.1754157634.MSI.5232.0  events.out.tfevents.1754157760.MSI.23408.0  events.out.tfevents.1754159936.MSI.22168.0
(+6 files in other folders)
