[metadata]
name = train-system
version = 2.0.0

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests*
    docs*
    examples*
    build*
    dist*
    *.egg-info*

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0

[build_ext]
inplace = 1

[install]
optimize = 1
